# python-jsonpath

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: pr.yml  publish.yml  tests.yaml  typing.yaml
jsonpath/: __init__.py  environment.py  exceptions.py  expressions.py  lex.py  node.py  parse.py  path.py  tokens.py
jsonpath/function_extensions/: count.py  length.py  match.py  search.py  value.py
jsonpath_rfc9535/: __init__.py  __main__.py  cli.py  environment.py  exceptions.py  expressions.py  filter_expressions.py  lex.py  node.py  parse.py  path.py  query.py  segments.py  selectors.py  tokens.py
jsonpath_rfc9535/function_extensions/: _pattern.py  count.py  length.py  match.py  search.py  value.py
jsonpath_rfc9535/utils/: nondeterministic_descent.py
scripts/: benchmark.py  nondeterministic_descent.py
src/jsonpath_ext/: __init__.py  __main__.py  cli.py  environment.py  filter_expressions.py  lex.py  node.py  parse.py  query.py  selectors.py  tokens.py
src/jsonpath_ext/function_extensions/: __init__.py  count.py  filter_function.py  length.py  match.py  search.py  value.py
src/jsonpath_ext/utils/: nondeterministic_descent.py
tests/: nondeterminism.py  test_cli.py  test_compare.py  test_compliance.py  test_cts_nondeterminism.py  test_env.py  test_errors.py  test_goessner.py  test_ietf_comparison.py  test_ietf_examples.py  test_ietf_well_typedness.py  test_iregexp.py  test_lex.py  test_nondeterminism.py  test_normalized_path.py  test_parse.py
