[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonpath-rfc9535"
dynamic = ["version"]
description = 'RFC 9535 - JSONPath: Query Expressions for JSON in Python'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "James Prior", email = "jamesgr.prior@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["regex"]

[project.urls]
Documentation = "https://jg-rp.github.io/python-jsonpath-rfc9535/"
Issues = "https://github.com/jg-rp/python-jsonpath-rfc9535/issues"
Source = "https://github.com/jg-rp/python-jsonpath-rfc9535"

[project.scripts]
jsonpath-rfc9535 = "jsonpath_rfc9535.cli:main"

[tool.hatch.version]
path = "jsonpath_rfc9535/__about__.py"

[tool.hatch.build.targets.sdist]
include = ["/jsonpath_rfc9535"]

[tool.hatch.build.targets.wheel]
include = ["/jsonpath_rfc9535"]

[tool.hatch.envs.default]
dependencies = [
  "black",
  "mypy",
  "pytest-cov",
  "pytest",
  "pyyaml",
  "ruff",
  "twine",
  "types-pyyaml",
  "types-regex",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=jsonpath_rfc9535 --cov=tests {args}"
cov-html = "pytest --cov-report=html --cov-config=pyproject.toml --cov=jsonpath_rfc9535 --cov=tests {args}"
no-cov = "cov --no-cov {args}"
test = "pytest {args}"
lint = "ruff check ."
typing = "mypy"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "jsonpath_rfc9535/__about__.py",
  "jsonpath_rfc9535/__main__.py",
  "jsonpath_rfc9535/utils/nondeterministic_descent.py",
]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.mypy]
files = "jsonpath_rfc9535"
python_version = "3.10"
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
no_implicit_reexport = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
warn_return_any = true
warn_unreachable = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C4",
  "D",
  "E",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PIE",
  "PL",
  "PT",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TCH",
  "TID",
  "YTT",
]

ignore = ["S105", "S101", "D107", "D105", "PLR0913", "SIM108"]

fixable = ["I"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"jsonpath_rfc9535/utils/__init__.py" = ["D104"]
"jsonpath_rfc9535/__about__.py" = ["D100"]
"jsonpath_rfc9535/__init__.py" = ["D104"]
"scripts/__init__.py" = ["D104"]
"tests/*" = ["D100", "D101", "D104", "D103"]
"jsonpath_rfc9535/lex.py" = ["E741"]
"jsonpath_rfc9535/utils/nondeterministic_descent.py" = [
  "D103",
  "D101",
  "D102",
  "S311",
]
"scripts/nondeterministic_descent.py" = ["T201"]
